Recovered pre-merge code with Dockerfile, docker-compose, and Swagger configs